--- a/frontend/src/assets/scss/light.module.scss
+++ b/frontend/src/assets/scss/light.module.scss
@@ -13,7 +13,7 @@ $cockpit-highlight-color: #2ca5b1;
 $icon-background: rgb(255 255 255);
 $bottom-menu-background: rgb(225 230 237 / 60%);
 $sidebar-background: rgb(225 230 237);
-$dropdown-background-color: #fff;
+$dropdown-background-color: $background-color;
 $cockpit-input-background: rgb(243 243 243);
 $cockpit-element-background: rgb(243 243 243);
 $cockpit-chip-background: rgb(225 230 237);
